<resources>
    <string name="app_name">WeatherAppHW3</string>
    <string name="temp">Temperature</string>
    <string name="temp_min">Temperature Min</string>
    <string name="temp_max">Temperature Max</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_degree">Wind Degree</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="check_forecast">Check Forecast</string>
    <string name="cities">Cities</string>
    <string name="current_weather">Current Weather</string>
    <string name="weather_forecast">Weather Forecast</string>
</resources>